[package]
name = "ipfixrw"
version = "0.1.0"
authors = ["Adam Goldsmith <adam@adamgoldsmith.name>"]
edition = "2021"
description = "IPFIX reader/writer library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
binrw = "0.11.1"
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display", "error"] }

[dev-dependencies]
bencher = "0.1.5"
hex = "0.4.3"
similar-asserts = { version = "1.4.2", default-features = false }
test-case = "3.0.0"

[[bench]]
name = "parse"
harness = false
